<resources>
    <string name="app_name">ColorApp5</string>
    <string name="jugar">Jugar</string>
    <string name="punutacion">Puntuación</string>
    <string name="configuracion">Configuración</string>
    <string name="palabrasdesplegadas">Palabras desplegadas</string>
    <string name="palabrascorrectas">Palabras correctas</string>
    <string name="intentosfaltantes">Intentos faltantes</string>
    <string name="pause">Pause</string>


    <string name="facebook_app_id">2153230684999756</string>
    <string name="facebookk_login_protocol_sheme">fb2153230684999756</string>

    <string name="tiempo">Tiempo</string>
    <string name="intentos">Intentos</string>
    <string name="tiempodepalabra">Tiempo de palabra en acción en segundos</string>
    <string name="numerodeintentos">Número de intentos</string>

</resources>
